<resources>
    <string name="lang_it" translatable="false">Italiano</string>
    <string name="lang_uk" translatable="false">Українська</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_tr" translatable="false">Türkçe</string>
    <string name="lang_pl" translatable="false">Polski</string>
    <string name="lang_ep" translatable="false">English (Philippines)</string>
    <string name="lang_it_value" translatable="false">it</string>
    <string name="lang_uk_value" translatable="false">uk</string>
    <string name="lang_en_value" translatable="false">en</string>
    <string name="lang_tr_value" translatable="false">tr</string>
    <string name="lang_pl_value" translatable="false">pl</string>
    <string name="lang_ep_value" translatable="false">ep</string>
    <string name="percent_progress" translatable="false">%1$d%%</string>
    <string name="label_pause" translatable="false">Pause</string>
    <string name="label_play" translatable="false">Play</string>
    <string name="label_restart" translatable="false">Restart</string>
    <string name="error_no_metadata" translatable="false">Unable to retrieve metadata.</string>
    <string name="material_drawer_open" translatable="false">Open</string>
    <string name="material_drawer_close" translatable="false">Close</string>
    <string name="uri_play_store_app_website" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="more" translatable="false">More</string>
    <string name="private_memory">Memoria privata</string>
    <string name="public_memory">Memoria pubblica</string>
    <string name="app_name">Risuscit&#242;</string>
    <string name="action_favourites">Preferiti</string>
    <string name="action_share">Condividi</string>
    <string name="letter_order_text">Indice alfabetico</string>
    <string name="page_order_text">Indice per pagina</string>
    <string name="search_name_text">Ricerca canto</string>
    <string name="always_on">No standby</string>
    <string name="always_on_summary">Impedisce allo schermo di andare in standby all\'interno dell\'applicazione.</string>
    <string name="title_activity_favourites">Preferiti</string>
    <string name="search_hint">Digita almeno 3 caratteri&#8230;</string>
    <string name="search_no_results">Nessun risultato corrispondente ai criteri di ricerca digitati.</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="title_activity_general_index">Indici</string>
    <string name="default_index_title">Indice predefinito</string>
    <string name="default_index_summary">Indica quale indice deve aprirsi per default alla selezione della pagina degli indici:</string>
    <string name="title_activity_canti_parola">Celebrazione della parola</string>
    <string name="canto_iniziale">Canto iniziale</string>
    <string name="prima_lettura">In risposta alla prima lettura</string>
    <string name="seconda_lettura">In risposta alla seconda lettura</string>
    <string name="terza_lettura">In risposta alla terza lettura</string>
    <string name="canto_fine">Canto finale</string>
    <string name="select_canto">Aggiungi canto</string>
    <string name="select_canto_popup">Aggiungi canto:</string>
    <string name="reset_list_question">Sei sicuro di voler resettare la lista?</string>
    <string name="title_activity_canti_eucarestia">Celebrazione dell\'Eucarestia</string>
    <string name="canto_pace">Alla pace</string>
    <string name="canto_pane">Alla frazione del pane</string>
    <string name="canto_vino">Al vino</string>
    <string name="title_activity_custom_lists">Liste</string>
    <string name="copertina">copertina</string>
    <string name="title_activity_inserisci_titolo">Ricerca per inserimento</string>
    <string name="title_activity_about">About</string>
    <string name="save_file">Salva in locale</string>
    <string name="no_connection">Nessuna connessione ad internet attiva</string>
    <string name="no_record">Registrazione non presente</string>
    <string name="about_subtitle">Versione per smartphone/tablet Android</string>
    <string name="dialog_delete_mp3">Sei sicuro di voler cancellare il brano dalla memoria del dispositivo?</string>
    <string name="save_location_title">Memoria predefinita</string>
    <string name="save_location_summary">Indica se vuoi rendere i file scaricati visibili alle altre applicazioni (per es. lettore musicale):</string>
    <string name="favorite_added">Aggiunto ai preferiti</string>
    <string name="favorite_removed">Rimosso dai preferiti</string>
    <string name="file_delete">File cancellato</string>
    <string name="download_completed">File salvato</string>
    <string name="download_running">Download in corso&#8230;</string>
    <string name="present_yet">Canto gi&#224; presente</string>
    <string name="dialog_present_yet">&#200; gi&#224; presente il canto:</string>
    <string name="dialog_wonna_replace">Vuoi sostituirlo?</string>
    <string name="fast_search_title">Ricerca veloce</string>
    <string name="advanced_search_title">Ricerca avanzata</string>
    <string name="advanced_search_subtitle">CERCA NEL TITOLO E NEL TESTO</string>
    <string name="show_seconda_title">Eucarestia - 2^ lettura</string>
    <string name="show_seconda_summary">Abilita il canto in risposta alla seconda lettura per l\'Eucarestia</string>
    <string name="action_add_list">Nuova lista</string>
    <string name="action_remove_list">Elimina lista</string>
    <string name="action_edit_list">Modifica lista</string>
    <string name="list_save_exit">Salva ed esci</string>
    <string name="add_position">Aggiungi elemento</string>
    <string name="content_drag">trascina elemento</string>
    <string name="aggiungi_confirm">aggiungi</string>
    <string name="posizione_add_desc">Titolo del nuovo elemento</string>
    <string name="lista_pers_piena">Il numero massimo di elementi consentito è di 30</string>
    <string name="lista_pers_vuota">La lista è vuota</string>
    <string name="lista_add_desc">Titolo della nuova lista</string>
    <string name="save_list_question">Stai per uscire dalla creazione della lista personalizzata. Vuoi salvare le modifiche?</string>
    <string name="action_help">Aiuto</string>
    <string name="dialog_change_title">Novit&#224;</string>
    <string name="action_tonalita">Tonalit&#224;</string>
    <string name="action_trasporta">Cambia</string>
    <string name="action_reset_tonalita">Predefinita</string>
    <string name="action_trasporta_do">Do / Do-</string>
    <string name="action_trasporta_dod">Do# / Do#-</string>
    <string name="action_trasporta_re">Re / Re-</string>
    <string name="action_trasporta_mib">Mib / Mib-</string>
    <string name="action_trasporta_mi">Mi / Mi-</string>
    <string name="action_trasporta_fa">Fa / Fa-</string>
    <string name="action_trasporta_fad">Fa# / Fa#-</string>
    <string name="action_trasporta_sol">Sol / Sol-</string>
    <string name="action_trasporta_sold">Sol# / Sol#-</string>
    <string name="action_trasporta_la">La / La-</string>
    <string name="action_trasporta_sib">Sib / Sib-</string>
    <string name="action_trasporta_si">Si / Si-</string>
    <string name="dialog_save_tab">Vuoi salvare la tonalit&#224; e il barr&#232; usati?</string>
    <string name="showcase_help_general">Puoi rivedere questi suggerimenti scegliendo la voce di menù \"Aiuto\".</string>
    <string name="tab_saved">Tonalit&#224; salvata</string>
    <string name="barre_saved">Posizione del barr&#232; salvata</string>
    <string name="tab_not_saved">Non hai cambiato la tonalit&#224;</string>
    <string name="barre_not_saved">Non hai cambiato la posizione del barr&#232;</string>
    <string name="showcase_end_title">Fine</string>
    <string name="list_added">Aggiunto alla lista</string>
    <string name="posizione_rename">Rinomina elemento</string>
    <string name="showcase_add_pos_desc">Con questo pulsante puoi aggiungere un nuovo elemento a piacere (es. \"Canto iniziale\", \"prima lettura\", etc.).
        Puoi aggiungere fino a 30 elementi.</string>
    <string name="showcase_rename_desc">Tieni premuto sul nome di un elemento per rinominarlo.</string>
    <string name="action_barre">Barr&#232;</string>
    <string name="action_reset_barre">Predefinito</string>
    <string name="action_trabar_NO">Senza barrè</string>
    <string name="action_trabar_I">al I° tasto</string>
    <string name="action_trabar_II">al II° tasto</string>
    <string name="action_trabar_III">al III° tasto</string>
    <string name="action_trabar_IV">al IV° tasto</string>
    <string name="action_trabar_V">al V° tasto</string>
    <string name="action_trabar_VI">al VI° tasto</string>
    <string name="action_trabar_VII">al VII° tasto</string>
    <string name="action_exp_pdf">Esporta PDF</string>
    <string name="show_pace_title">Parola - Canto alla pace</string>
    <string name="show_pace_summary">Abilita il canto alla pace per la celebrazione della Parola</string>
    <string name="show_santo_title">Eucarestia - Santo</string>
    <string name="show_santo_summary">Abilita la visualizzazione del Santo per l\'Eucarestia</string>
    <string name="theme">Tema</string>
    <string name="lists_pref">Liste</string>
    <string name="system">Sistema</string>
    <string name="show_audio_title">Mostra riproduzione audio</string>
    <string name="show_audio_summary">Mostra di default la barra di riproduzione audio nella pagina dei canti</string>
    <string name="title_trasporta_do">Do</string>
    <string name="title_trasporta_dod">Do#</string>
    <string name="title_trasporta_re">Re</string>
    <string name="title_trasporta_mib">Mib</string>
    <string name="title_trasporta_mi">Mi</string>
    <string name="title_trasporta_fa">Fa</string>
    <string name="title_trasporta_fad">Fa#</string>
    <string name="title_trasporta_sol">Sol</string>
    <string name="title_trasporta_sold">Sol#</string>
    <string name="title_trasporta_la">La</string>
    <string name="title_trasporta_sib">Sib</string>
    <string name="title_trasporta_si">Si</string>
    <string name="language_title">Lingua</string>
    <string name="language_summary">Imposta la lingua per il menù e i canti:</string>
    <string name="title_activity_consegnati">Consegnati</string>
    <string name="title_activity_history">Cronologia</string>
    <string name="show_offertorio_title">Eucarestia - Offertorio</string>
    <string name="show_offertorio_summary">Abilita il canto all\'offertorio per l\'Eucarestia</string>
    <string name="title_trabar_I">I</string>
    <string name="title_trabar_II">II</string>
    <string name="title_trabar_III">III</string>
    <string name="title_trabar_IV">IV</string>
    <string name="title_trabar_V">V</string>
    <string name="title_trabar_VI">VI</string>
    <string name="title_trabar_VII">VII</string>
    <string name="night_theme_title">Tema Scuro</string>
    <string name="passage_filter">Filtra per passaggio</string>
    <string name="catechesi_iniziali">Catechesi iniziali</string>
    <string name="scrutinio_1">Primo scrutinio</string>
    <string name="shema">Shemà</string>
    <string name="scrutinio_2">Secondo scrutinio</string>
    <string name="iniziazione_preghiera">Iniziazione alla preghiera</string>
    <string name="traditio">Traditio</string>
    <string name="ritraditio">Re-traditio</string>
    <string name="redditio">Redditio</string>
    <string name="padre_nostro_1">Padre nostro - 1^ parte</string>
    <string name="padre_nostro_2">Padre nostro - 2^ parte</string>
    <string name="padre_nostro_3">Padre nostro - conclusione</string>
    <string name="elezione_1">Elezione - 1^ parte</string>
    <string name="elezione_2">Elezione - Parte intermedia</string>
    <string name="elezione_3">Elezione - finale</string>
    <string name="passaggio_none">Nessuno</string>
</resources>