<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_to_favorites"
        android:title="@string/title_activity_favourites" />

    <item
        android:title="@string/title_activity_canti_parola" >

        <menu>
            <item
                android:id="@+id/add_to_p_iniziale"
                android:title="@string/canto_iniziale" />

            <item
                android:id="@+id/add_to_p_prima"
                android:title="@string/prima_lettura" />

            <item
                android:id="@+id/add_to_p_seconda"
                android:title="@string/seconda_lettura" />

            <item
                android:id="@+id/add_to_p_terza"
                android:title="@string/terza_lettura" />

            <item
                android:id="@+id/add_to_p_fine"
                android:title="@string/canto_fine" />
        </menu>

    </item>

    <item
        android:title="@string/title_activity_canti_eucarestia" >

        <menu>
            <item
                android:id="@+id/add_to_e_iniziale"
                android:title="@string/canto_iniziale" />

            <item
                android:id="@+id/add_to_e_pace"
                android:title="@string/canto_pace" />

            <item
                android:id="@+id/add_to_e_pane"
                android:title="@string/canto_pane" />

            <item
                android:id="@+id/add_to_e_vino"
                android:title="@string/canto_vino" />

            <item
                android:id="@+id/add_to_e_fine"
                android:title="@string/canto_fine" />
        </menu>

    </item>

</menu>
