<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_indexes"
        android:checkable="true"
        android:icon="@drawable/format_list_bulleted_24px"
        android:title="@string/title_activity_general_index" />
    <item
        android:id="@+id/navigation_lists"
        android:checkable="true"
        android:icon="@drawable/view_carousel_checkable_24px"
        android:title="@string/title_activity_custom_lists" />
    <item
        android:id="@+id/navigation_favorites"
        android:checkable="true"
        android:icon="@drawable/bookmarks_checkable_24px"
        android:title="@string/action_favourites" />
    <item
        android:id="@+id/navigation_consegnati"
        android:checkable="true"
        android:icon="@drawable/fact_check_checkable_24px"
        android:title="@string/title_activity_consegnati" />
    <item
        android:id="@+id/navigation_history"
        android:checkable="true"
        android:icon="@drawable/history_24px"
        android:title="@string/title_activity_history" />
</menu>