<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:risuscito="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <!--<item tools:ignore="MenuTitle">-->
            <!--<menu>-->
                <item
                    android:id="@+id/navigation_home"
                    android:icon="@drawable/ic_home_black_48dp"
                    android:title="@string/activity_homepage"
                    android:checked="true"/>
                <item
                    android:id="@+id/navigation_search"
                    android:icon="@drawable/ic_search_black_48dp"
                    android:title="@string/search_name_text"/>
                <item
                    android:id="@+id/navigation_indexes"
                    android:icon="@drawable/ic_view_list_black_48dp"
                    android:title="@string/title_activity_general_index"/>
                <item
                    android:id="@+id/navitagion_lists"
                    android:icon="@drawable/ic_view_carousel_black_48dp"
                    android:title="@string/title_activity_custom_lists"/>
                <item
                    android:id="@+id/navitagion_favorites"
                    android:icon="@drawable/ic_favorite_black_48dp"
                    android:title="@string/action_favourites"/>
                <item
                    android:id="@+id/navitagion_consegnati"
                    android:icon="@drawable/ic_assignment_turned_in_black_48dp"
                    android:title="@string/title_activity_consegnati"/>
                <item
                    android:id="@+id/navitagion_history"
                    android:icon="@drawable/ic_history_black_48dp"
                    android:title="@string/title_activity_history"/>
            <!--</menu>-->
        <!--</item>-->
        <!--<item tools:ignore="MenuTitle">-->
            <!--<menu>-->
                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/title_activity_settings"/>
                <item
                    android:id="@+id/navigation_changelog"
                    android:icon="@drawable/ic_info_outline_black_48dp"
                    android:title="@string/title_activity_about"/>
                <item
                    android:id="@+id/navigation_donate"
                    android:icon="@drawable/ic_thumb_up_black_48dp"
                    android:title="@string/title_activity_donate"/>
            <!--</menu>-->
        <!--</item>-->
    </group>

</menu>